// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transform almost-eligible record 1`] = `
{
  "caseNotes": {
    "foo": [
      {
        "eventDate": 2022-06-28T00:00:00.000Z,
        "noteBody": "A body",
        "noteTitle": "A title",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoDetainersWarrantsOrOther": null,
  },
  "externalId": "002",
  "ineligibleCriteria": {
    "usMeNoClassAOrBViolationFor90Days": {
      "eligibleDate": 2022-11-15T00:00:00.000Z,
      "highestClassViol": "A",
      "violType": "foo",
    },
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2023-01-03T00:00:00.000Z,
      "xPortionServed": "2/3",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2022-12-07T00:00:00.000Z,
    },
  },
  "stateCode": "US_ME",
}
`;

exports[`transform record 1`] = `
{
  "caseNotes": {
    "foo": [
      {
        "eventDate": 2022-06-28T00:00:00.000Z,
        "noteBody": "A body",
        "noteTitle": "A title",
      },
    ],
  },
  "eligibleCriteria": {
    "usMeCustodyLevelIsMinimumOrCommunity": {
      "custodyLevel": "MINIMUM",
    },
    "usMeNoClassAOrBViolationFor90Days": null,
    "usMeNoDetainersWarrantsOrOther": null,
    "usMeServedXPortionOfSentence": {
      "eligibleDate": 2022-11-03T00:00:00.000Z,
      "xPortionServed": "1/2",
    },
    "usMeXMonthsRemainingOnSentence": {
      "eligibleDate": 2022-08-07T00:00:00.000Z,
    },
  },
  "externalId": "001",
  "ineligibleCriteria": {},
  "stateCode": "US_ME",
}
`;
